# Django-REST-Framework

./: .env_example  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
conf/:  settings.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
materials/:  serializers.py   tests.py  admin.py  models.py  paginators.py  tasks.py  urls.py  validators.py  views.py
materials/fixtures/: mypedia.json  payments.json
materials/management/commands/: load_mypedia.py
materials/migrations/: 0001_initial.py  0002_initial.py
src/: utils.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/fixtures/: groups.json  users.json
users/management/commands/: create_superuser.py  load_payments.py  load_users.py  load_users_and_groups.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_managers_rename_user_payment_owner_and_more.py  0004_delete_payment.py
