[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["Valeriya Chulkova chulkovav66@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.1.4"
djangorestframework = "3.15.2"
psycopg2 = "2.9.10"
pillow = "11.1.0"
environs = "14.0.0"
django-filter = "*"
flake8 = "7.1.2"
gunicorn = "23.0.0"

#phonenumbers = "*"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"